# libgtkmusic

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  gtkmusic-0.2.pc.in  gtkmusic.pc.in  gtkmusic.yaml  libgtkmusic.doap  meson.build  meson_options.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cmake/: FindGObjectIntrospection.cmake  FindGladeUI.cmake  FindXMLLint.cmake
glade/: Makefile.am  Makefile.in  gtkmusic-catalog.xml
python/: example.py  virtualpiano.py
src/: GuitarWidget.c  GuitarWidget.vala  Makefile.am  Makefile.in  MusicalNotes.c  MusicalNotes.vala  PianoWidget.c  PianoWidget.vala  TestsMusicalNotes.vala
test/: TestsGuitar.c  TestsGuitar.vala  TestsMusicalNotes.c  TestsPiano.c  TestsPiano.vala
