CLEANFILES=
EXTRA_DIST=

###############################################################################
# root
###############################################################################

dist_doc_DATA = README

ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gtkmusic-0.2.pc

EXTRA_DIST += gtkmusic-0.2.pc.in

DISTCHECK_CONFIGURE_FLAGS = --enable-introspection

###############################################################################
# glade
###############################################################################

if ENABLE_GLADE_CATALOG

#Thanks vte for the example!

catalogdir = $(GLADE_CATALOG_DIR)
catalog_DATA = $(srcdir)/glade/gtkmusic-catalog.xml

icons = \
	$(srcdir)/glade/hicolor_actions_16x16_widget-gtkmusic-guitar.png \
	$(srcdir)/glade/hicolor_actions_22x22_widget-gtkmusic-guitar.png \
	$(srcdir)/glade/hicolor_actions_16x16_widget-gtkmusic-piano.png \
	$(srcdir)/glade/hicolor_actions_22x22_widget-gtkmusic-piano.png

EXTRA_DIST += \
	$(catalog_DATA) \
	$(icons)

install-icons:
	for icon in $(icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(GLADE_ICON_DIR)/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $$icon $(DESTDIR)$(GLADE_ICON_DIR)/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-icons:
	-for icon in $(icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		CONTEXT=`echo $$icon | cut -d_ -f2`; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(GLADE_ICON_DIR)/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

validate: $(catalog_DATA)
	xmllint --dtdvalid $(srcdir)/glade/glade-catalog.dtd --noout $<

install-data-local: install-icons
uninstall-local: uninstall-icons

#MAINTAINERCLEANFILES = $(catalog_DATA) glade catalog is not autogenerated

endif

###############################################################################
# src
###############################################################################

lib_LTLIBRARIES = libgtkmusic-0.2.la

libgtkmusic_0_2_la_SOURCES = \
	$(srcdir)/src/GuitarWidget.vala \
	$(srcdir)/src/PianoWidget.vala \
	$(srcdir)/src/MusicalNotes.vala

libgtkmusic_0_2_la_VALAFLAGS = \
	-H gtkmusic.h --vapi gtkmusic-0.2.vapi \
	-h gtkmusic-internals.h \
	--internal-vapi gtkmusic-internals-0.2.vapi \
	--library gtkmusic-0.2 --gir GtkMusic-0.2.gir \
	--pkg gtk+-3.0 --pkg gee-0.8 \
	$(VALAFLAGS)

libgtkmusic_0_2_la_CPPFLAGS=$(LIBGTKMUSICDEPS_CFLAGS)

libgtkmusic_0_2_la_LIBADD=$(LIBGTKMUSICDEPS_LIBS)

libgtkmusic_0_2_la_LDFLAGS = \
	-version-info $(LIBGTKMUSIC_LT_VERSION) \
	-no-undefined

gtkmusicincludedir = $(includedir)/gtkmusic-0.2
gtkmusicinclude_HEADERS = gtkmusic.h

vapidir = $(datadir)/vala/vapi
dist_vapi_DATA = gtkmusic-0.2.vapi

if HAVE_INTROSPECTION

girdir = @INTROSPECTION_GIRDIR@
gir_DATA = GtkMusic-0.2.gir

typelibdir = @INTROSPECTION_TYPELIBDIR@
typelib_DATA = GtkMusic-0.2.typelib

GtkMusic-0.2.typelib: GtkMusic-0.2.gir
	@INTROSPECTION_COMPILER@ --shared-library=libgtkmusic-0.2 -o $@ $^
endif

GtkMusic-0.2.gir gtkmusic-internals-0.2.vapi gtkmusic-0.2.vapi: libgtkmusic-0.2.la

CLEANFILES += \
	gtkmusic-0.2.vapi \
	gtkmusic-internals-0.2.vapi \
	GtkMusic-0.2.gir \
	GtkMusic-0.2.typelib \
	gtkmusic.h \
	gtkmusic-internals.h

###############################################################################
# tests
###############################################################################

#TODO Find a more elegant way of doing this
bin_PROGRAMS = tests_notes tests_piano tests_guitar
COMMON_CFLAGS = $(LIBGTKMUSICDEPS_CFLAGS) `pkg-config --cflags gtkmusic-0.2`
COMMON_LIBS = $(LIBGTKMUSICDEPS_LIBS) `pkg-config --libs gtkmusic-0.2`
COMMON_VALAFLAGS = --pkg gee-0.8 --pkg gtkmusic-0.2 --pkg gtk+-3.0
tests_notes_SOURCES = $(srcdir)/test/TestsMusicalNotes.vala
tests_notes_VALAFLAGS = $(COMMON_VALAFLAGS)
tests_notes_CFLAGS= $(COMMON_CFLAGS)
tests_notes_LDFLAGS= $(COMMON_LIBS)
tests_piano_SOURCES = $(srcdir)/test/TestsPiano.vala
tests_piano_VALAFLAGS = $(COMMON_VALAFLAGS)
tests_piano_CFLAGS=$(COMMON_CFLAGS)
tests_piano_LDFLAGS=$(COMMON_LIBS)
tests_guitar_SOURCES = $(srcdir)/test/TestsGuitar.vala
tests_guitar_VALAFLAGS = $(COMMON_VALAFLAGS)
tests_guitar_CFLAGS=$(COMMON_CFLAGS)
tests_guitar_LDFLAGS=$(COMMON_LIBS)
